# DCS-Agentic-Mission-Editor

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  install.py  pyproject.toml  run-gui.bat  setup-mcp.bat  setup.bat  start-mission-gui.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: tests.yml
docs/: after_action.md  agents.md  architecture.md  catalog.md  cli.md  examples.md  importer.md  index.md  mcp.md  pipeline.md  schema-reference.md  validation.md
examples/: cap.json  capabilities_demo.json  carrier_ops.json  cas_sa6_gauntlet.json  multirole_f16.json  strike_with_sead.json
scripts/: dump_schema.py
src/dcs_agentic/: __init__.py  __main__.py  errors.py  units.py
src/dcs_agentic/agents/: __init__.py  campaign_agent.py  editor_agent.py  mission_agent.py
src/dcs_agentic/campaign/: __init__.py  after_action.py  runner.py
src/dcs_agentic/catalog/: __init__.py  aircraft.py  callsigns.py  countries.py  payloads.py  ships.py  statics.py  theatres.py  vehicles.py
src/dcs_agentic/cli/: __init__.py  build.py  campaign.py  design.py  edit.py  import_miz.py  inspect.py  list_catalog.py  mcp_cmd.py  setup_cmd.py  validate.py
src/dcs_agentic/importer/: __init__.py  miz_reader.py
tests/: conftest.py  test_after_action.py  test_agents.py  test_assembler.py  test_cli_and_examples.py  test_mcp.py  test_phase4_tail.py  test_schema.py  test_triggers_and_importer.py  test_validation.py
tests/fixtures/: demo_cap_full.json  minimal_carrier.json
(+46 files in other folders)
