[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dcs-agentic"
version = "0.1.0"
description = "AI-powered DCS World mission generator"
requires-python = ">=3.11"
dependencies = [
    "pydcs>=0.15",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
agents = [
    "anthropic>=0.40",
    "jinja2>=3.1",
]
mcp = [
    "mcp>=1.2",
]
gui = [
    "PySide6>=6.6",
]

[project.scripts]
dcs-agentic = "dcs_agentic.__main__:main"
dcs-agentic-mcp = "dcs_agentic.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"